fix iOS issues: (SA-298:App does not fit to screen, SA-296: Horizontal scrolling, SA-299) (#221)
* fix(YarnPackageDependency)

* Fix(100vh) issue not tested

* fix(iOSScrollFiles): Fix Scrolling only vertically.

* Update yarn.lock

--- a/layouts/Layout.less
+++ b/layouts/Layout.less
@@ -3,7 +3,7 @@
 @mobile_candybar_media_open_offset: 18rem;
 #app-wrap {
   #app.mobile-app {
-    height: calc(100vh - @mobile-nav-size);
+    height: calc(var(--app-height) - @mobile-nav-size);
     transition: height @animation-speed;
   }
   #mobile-nav {
@@ -12,7 +12,7 @@
 
   &.is-collapsed {
     #app.mobile-app {
-      height: 100vh;
+      height: var(--app-height);
     }
     #mobile-nav {
       bottom: -@mobile-nav-size;
@@ -30,7 +30,7 @@
 #app {
   display: flex;
   user-select: none;
-  height: 100vh;
+  height: var(--app-height);
   .dynamic-content {
     width: 100%;
     position: relative;
