--- a/pages/files/browse/Browse.less
+++ b/pages/files/browse/Browse.less
@@ -2,6 +2,7 @@
   padding: @normal-spacing;
 
   .files-container {
+    width: 100%;
     display: flex;
     flex-direction: row;
   }
